--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,6 @@
 /* Base Styles */
 $body-bg:rgb(255, 255, 255);
+$box-shadow:2px 3px 10px rgb(0 0 0 / 9%);
 $form-background-dark:#1a1918;
 $form-background-light:#ffefef;
 $form-color:#fff;
@@ -23,7 +24,8 @@ $button_color:#fff;
 $button_radius:12px;
 $button_padding:2em;
 $desktop-grid:3fr 3fr 3fr 3fr;
-$desktop-grid-gap:4rem;
+$desktop-grid-gap:2rem;
+
 
 $padding1: 1rem;
 $padding2: 2rem;
@@ -391,7 +393,7 @@ a {
     margin-bottom:2rem;
 }
 .homepage-hero {
-    margin-bottom:4rem;
+    margin-bottom:3rem;
 }
 
 
@@ -478,7 +480,7 @@ select::-ms-expand {
     width: calc(100% - 2rem);
   }
   .select::after {
-    content: "";
+    
     content: "";
     width: 0.8em;
     height: 0.5em;
@@ -492,8 +494,8 @@ select::-ms-expand {
     transition:0.2s;
   }
   .select:focus-within::after{
-    background-color:#000;;
-    rotate:180deg;
+    background-color:#fff;
+    scale:-1;
     transition:0.2s;
   }
   .select {
@@ -621,6 +623,7 @@ button {
     background:#fff;
     position:relative;
     z-index:34;
+    box-shadow:$box-shadow;
 }
 nav {
     z-index:2;
@@ -643,7 +646,7 @@ nav.open{
     opacity:1;
     transition: all 0.3s ease-out;   
     z-index:5;
-    border-bottom:2px solid #ccc;
+    box-shadow:inset $box-shadow;
 }
 nav ul{
     display: flex;
@@ -907,6 +910,7 @@ div#recipes {
     display: grid;
     grid-template-columns: $desktop-grid;
     column-gap: $desktop-grid-gap;
+    row-gap:$desktop-grid-gap;
     padding:0;
     margin:0;
 
@@ -915,11 +919,16 @@ div#recipes {
     background-color: #fff;
     height: $desktopCardHeight;
     margin-bottom:0rem;
+    padding:0 0 2rem 0;
+    margin:0 0 0 1rem;;
     box-sizing:border-box;
+    box-shadow:$box-shadow;
+
+    
 }
 .card .text-area{
-    padding:0 0 2rem 0;
-    margin:0;
+    padding:0;
+    margin:0 1rem;
 }
 .card {
     display:inline-block;
@@ -927,6 +936,9 @@ div#recipes {
     color:unset;
     width:100%;
     height:inherit;
+}
+.card.article{
+    box-shadow:none;
 }
 .card a.photographer {
     position:relative;
@@ -1011,17 +1023,18 @@ date{
 .photoInfo a {
     color:#fff;
 }
-.home-page .imageElement{
-    width:100%;
-    height:auto;
-    background-color:#ffdc52;
+.home-page .imageElement {
+    width: 100%;
+    height: auto;
+    background-color: #ffdc52;
     background-position: center;
-    background-size: contain;
+    background-size: cover;
     position: relative;
-    left:0;
-    top:0;
-    z-index:0;
-    opacity:1;
+    height: calc(25vw - 8rem);
+    left: 0;
+    top: 0;
+    z-index: 0;
+    opacity: 1;
 }
 .article-page .imageElement{
     background-color: #ffdc52;
@@ -1111,10 +1124,13 @@ article {
 .card:last-of-type{
     margin-bottom:1rem;
 }
+
 article h1 {
     color:#000;
     font-family: $headingText;
-    padding:0 0 $padding1 0;
+    font-size:1.2rem;
+    padding:0.5rem  0 0.45rem 0;
+    line-height:1.25;
 }
 .text-area{
     position: relative;
@@ -1748,7 +1764,7 @@ a {color:#fff;}
         margin-bottom:3rem;
         text-align: left;
     }
-   
+    
     .homepage-hero h2{
         display:none;
         top:2.5rem;
@@ -1760,6 +1776,7 @@ a {color:#fff;}
     }
     button.search-button{
         display: block;
+        display:none;
         position: absolute;
         background: red;
         width: 30px;
@@ -1795,6 +1812,7 @@ a {color:#fff;}
             font-size: 1.75rem;
             line-height: 0.5rem;
     }
+
     .home-page .search-filters.grid{
         display:block;
         min-height:12rem;
@@ -1805,9 +1823,14 @@ a {color:#fff;}
         position: relative;
 
     }
+
     legend {
         background:transparent;
     }
+    .home-page fieldset{
+        padding: 0.5rem 0;
+    }
+    
     .home-page .search-filters.grid input,
     .home-page .search-filters.grid select{
         width:calc(100%);
@@ -1817,9 +1840,46 @@ a {color:#fff;}
     input.search-field{
         margin-bottom:0.5rem;
     }
+
     .select {
         width:100%;
         left:unset;
+    }
+    .home-page .search-filters.grid select{
+        height:2rem;
+
+    }
+    .home-page .search-filters.grid option{
+        color:#000;
+    }
+    .home-page .search-filters.grid select {
+        height: 2rem;
+        line-height: 2rem;
+        background: transparent;
+        color: #fff;
+        font-size: 0.875rem;
+        position: absolute;
+        left: 54px;
+        top: -1.69rem;
+    }
+    .home-page .search-filters.grid select::after{
+        content: "";
+        width: 0.8em;
+        height: 0.5em;
+        background-color: #fff;
+        clip-path: polygon(100% 0%, 0 0%, 50% 100%);
+        box-sizing: border-box;
+        right: unset;
+        top: 2.5rem;
+        left: 70%;
+        top: 56%;
+        display: flex;
+        position: relative;
+        transition: 0.2s;
+        background-color:#fff;
+        height:2em;
+        width:3em;
+
     }
     .addNewRecipe{
         width: calc(100% - 2rem);
@@ -1833,23 +1893,42 @@ a {color:#fff;}
         align-self:center;
         display: block;
     }
+
     .summary {
         font-size: 1.125rem;
         margin-bottom: 0rem;
         margin: 2rem 0 0rem 0;
     }
+
     .addNewRecipe::before{
         font-size:1.125rem;
         line-height:4rem;
         align-self:center;
     }
+    .home-page .card{
+        padding:0;
+    }
+    .home-page .imageElement {
+        width: 100%;
+        height: auto;
+        background-color: #ffdc52;
+        background-position: center;
+        background-size: cover;
+        position: relative;
+        height: calc(50vw - 2.5rem);
+        left: 0;
+        top: 0;
+        z-index: 0;
+        opacity: 1;
+    }
     .home-page .card .text-area {
         // min-height: 38rem;
         position: relative;
-        padding: 0 1rem;
+        padding: 0;
         height: auto;
         overflow: hidden;
     }
+
     .home-page article {
         display:grid;
         grid-template-columns: 1fr 1fr;
@@ -1898,7 +1977,10 @@ a {color:#fff;}
         font-weight:400;
     }
   .select::after {
-    top:56%;
+    top: 6px;
+    right: unset;
+    left: 188px;
+    background-color: #fff;
   }
   legend{
     font-size:0.875rem;
